Wed Oct 20 09:22:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          Add nddsmonitor as default to 0

Wed Oct 20 09:19:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:

        * bin/MakeProjectCreator/config/global.features:

        * tests/Time_Value_Test.cpp:

Tue Oct 19 18:11:57 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Caching_Utility_T.cpp:
          Added missing include.

Tue Oct 19 09:44:45 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Caching_Utility_T.cpp:
          Use ACE::is_equal() to compare floating point values.

Fri Oct 15 10:18:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Fixed warning

Thu Oct 14 18:29:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
          3911 doesn't work with ace_for_tao

Thu Oct 14 13:15:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/Process.h:
        * ace/Process.cpp:
          Changes to allow to dynamically define the max. number of cmdline args.
          The tao_idl compiler was running out of room in certain instances and
          the static max was very conservative.

Thu Oct 14 09:38:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Wchar build fixes.

Wed Oct 13 08:24:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Wchar build fixes.

Wed Oct 13 06:15:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Framework_Component.h:
        * ace/Framework_Component.inl:
        * ace/Framework_Component.cpp:
        * ace/Framework_Component_T.h:
          Use ACE_Copy_Disabled, change c-style cast to const cast, use
          sync macros instead of ACE_MT. Thanks to Ranjit Hande