@@ -18,6 +18,7 @@
 #include "ace/Guard_T.h"
 #include "ace/Log_Msg.h"
 #include "ace/Reactor_Timer_Interface.h"
+#include "ace/Reverse_Lock_T.h"
 #include "ace/Null_Mutex.h"
 #include "ace/OS_NS_sys_time.h"
 
@@ -267,6 +268,9 @@ ACE_Timer_Queue_T<TYPE, FUNCTOR, ACE_LOCK>::expire (const ACE_Time_Value &cur_ti
 
   while ((result = this->dispatch_info_i (cur_time, info)) != 0)
     {
+      ACE_MT (ACE_Reverse_Lock<ACE_LOCK> rev_lk(this->mutex_));
+      ACE_MT (ACE_GUARD_RETURN (ACE_Reverse_Lock<ACE_LOCK>, rmon, rev_lk, -1));
+
       const void *upcall_act = 0;
 
       this->preinvoke (info, cur_time, upcall_act);
